--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
     },
     "dependencies": {
-        "express": "^4.16.2"
+        "body-parser": "^1.18.3",
+        "d3": "^5.6.0",
+        "express": "^4.16.2",
+        "mongoose": "^5.2.9"
     },
     "devDependencies": {
         "concurrently": "^3.5.0"
