--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "body-parser": "^1.18.3",
         "d3": "^5.6.0",
         "express": "^4.16.2",
+        "lodash": "^4.17.10",
         "mongoose": "^5.2.9"
     },
     "devDependencies": {
