--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "body-parser": "^1.18.3",
+        "connect-wwwhisper": "^0.1.20",
         "d3": "^5.6.0",
         "express": "^4.16.2",
         "lodash": "^4.17.10",
