--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "connect-wwwhisper": "^0.1.20",
         "d3": "^5.6.0",
         "express": "^4.16.2",
+        "helmet": "^3.21.2",
         "lodash": "^4.17.10",
         "mongoose": "^5.2.9"
     },
