--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "body-parser": "^1.18.3",
         "connect-wwwhisper": "^0.1.20",
         "d3": "^5.6.0",
+        "dotenv": "^8.2.0",
         "express": "^4.16.2",
         "helmet": "^3.21.2",
         "lodash": "^4.17.10",
